--- a/friends.html
+++ b/friends.html
@@ -121,11 +121,11 @@
                             </div>
                             <span class="vip fw-bold c-orange">VIP</span>
                         </div>
-                        <div class="finally flex-between">
+                        <div class="finally flex-between ">
                             <p class="c-grey">Joined 02/10/2021</p>
                             <div>
-                                <a class="btn-shape bg-blue c-white" href="profile.html">Profile</a>
-                                <a class="btn-shape bg-red c-white" href="#">Remove</a>
+                                <a class="bg-blue c-white" href="profile.html">Profile</a>
+                                <a class="bg-red c-white" href="#">Remove</a>
                             </div>
                         </div>
                     </div>
